[package]
name = "swears"
version = "0.1.13"
authors = ["adam-mcdaniel <adam.mcdaniel17@gmail.com>"]
edition = "2018"
description = "Use swears, not curses"
readme = "README.md"
license = "MIT"
repository = "https://github.com/adam-mcdaniel/swears"
homepage = "https://github.com/adam-mcdaniel/swears"
documentation = "https://docs.rs/swears"

[dependencies.pancurses]
version = "0.16"
features = ["win32"]